# src/application/controllers/index.ts
@@ -1,5 +1,6 @@
 export * from './controller'
 export * from './facebook-login'
+export * from './refresh-token'
 export * from './save-picture'
 export * from './health-check'
 export * from './advanced-health-check'
