# src/main/adapters/express-router.ts
@@ -5,6 +5,6 @@ type Adapter = (controller: Controller) => RequestHandler
 
 export const adaptExpressRoute: Adapter = controller => async (req, res) => {
   const { statusCode, data } = await controller.handle({ ...req.body, ...req.locals })
-  const json = [200, 204].includes(statusCode) ? data : { error: data.message }
+  const json = [200, 204].includes(statusCode) ? data : { error: data.message, requestId: req.locals?.requestId }
   res.status(statusCode).json(json)
 }
