# src/main/factories/application/controllers/index.ts
@@ -1,4 +1,5 @@
 export * from './facebook-login'
+export * from './refresh-token'
 export * from './save-picture'
 export * from './health-check'
 export * from './advanced-health-check'
