# src/main/routes/login.ts
@@ -1,7 +1,9 @@
 import { Router } from 'express'
-import { makeFacebookLoginController } from '@/main/factories/application/controllers'
+import { makeFacebookLoginController, makeRefreshTokenController } from '@/main/factories/application/controllers'
 import { adaptExpressRoute as adapt } from '@/main/adapters'
+import { authRateLimiter } from '@/main/middlewares'
 
 export default (router: Router): void => {
-  router.post('/login/facebook', adapt(makeFacebookLoginController()))
+  router.post('/login/facebook', authRateLimiter, adapt(makeFacebookLoginController()))
+  router.post('/login/refresh', authRateLimiter, adapt(makeRefreshTokenController()))
 }
